--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 <a href="lab1no1-4/Lab1no2.html">Lab1no2</a>
                 <a href="lab1no1-4/Lab1no3.html">Lab1no3</a>
                 <a href="lab1no1-4/Lab1no4.html">Lab1no4</a>
-                <a href="lab1no5/web1/workshop1/index2.html">Lab1no5A - index2.html</a>
-                <a href="lab1no5/web1/workshop2/classMonday/homework/exercise1.html">Lab1no5A - exercise1.html</a>
+                <a href="lab1no5/web1/workshop1/index2.html">Lab1no5A (1-2)</a>
+                <a href="lab1no5/web1/workshop2/classMonday/homework/exercise1.html">Lab1no5A (3-5)</a>
                 <a href="lab1no5/web2/index.html">Lab1no5B</a>
             </div>
         </div>
